--- a/index.html
+++ b/index.html
@@ -4,27 +4,24 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Registration Form</title>
-  <style>body{
-    background-color:blue;
-    }</style>
 </head>
 <body>
   <h1>Registration Form</h1>
   <form id="registrationForm">
     <label for="name">Name:</label>
-    <input type="text" id="name" required><br>
+   <p> <input type="text" id="name" required></p>
 
     <label for="email">Email:</label>
-    <input type="email" id="email" required><br>
+    <p><input type="email" id="email" required></p>
 
     <label for="password">Password:</label>
-    <input type="password" id="password" required><br>
+   <p> <input type="password" id="password" required></p>
 
     <label for="dob">Date of Birth:</label>
-    <input type="date" id="dob" required><br>
+    <p><input type="date" id="dob" required></p>
 
     <label for="terms">I accept the terms:</label>
-    <input type="checkbox" id="terms" required><br>
+   <p> <input type="checkbox" id="terms" required><br></p>
 
     <button type="submit">Submit</button>
   </form>
